[package]
name = "reservoir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
reqwest = { version = "0.11.3", features = ["json"] }
eyre = "0.6.8"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.24"
