[package]
name = "reservoir-nft"
version = "0.1.92"
edition = "2021"
description = "Rust client for http://api.reservoir.tools/"
license = "MIT"
repository = "https://github.com/wilsoncusack/reservoir-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
reqwest = { version = "0.11.3", features = ["json"] }
eyre = "0.6.8"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.24"
tokio = { version = "1.24.2", features = ["macros"] }


